# breedgraph

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
erd/: erd.py
instance/: breedgraph.env  breedgraph.service  envars_public.sh
scripts/: __init__.py  setup_initial_data.py  setup_state_store.py
src/: setup.py
src/breedgraph/: __init__.py  bootstrap.py  config.py  custom_exceptions.py  main.py
src/breedgraph/config/: __init__.py  files.py  (+7 more)
src/dbtools/: bootstrap.py  config.py  custom_exceptions.py  run.py
src/erd/: erd.py
src/tests/: pytest.ini
tests/: conftest.py  gmail_fetching.py  inputs.py  mailhog_fetching.py  run_all_tests.sh  test_inputs.py
tests/e2e/: conftest.py  payload_helpers.py  test_initialise.py  utils.py
tests/integration/: conftest.py  pytest.ini  test_accounts_repository.py  test_arrangements_repository.py  test_blocks_repository.py  test_datasets_repository.py  test_emails.py  test_germplasm_repository.py  test_ontologies_repository.py  test_ontology_repository.py  test_organisations_repository.py  test_people_repository.py  test_programs_repository.py  test_references_repository.py  test_regions_repository.py
tests/scenarios/: __init__.py  account_builder.py  arrangement_builder.py  authorisation_manager.py  block_builder.py  germplasm_builder.py  ontology_builder.py  organisation_builder.py  person_builder.py  program_builder.py  reference_builder.py  region_builder.py
tests/unit/: fake_handlers.py
tests/utilities/: exceptions.py  gmail_fetching.py  inputs.py  mailhog_fetching.py  retry.py
(+747 files in other folders)
