[build-system]
requires = ["setuptools~=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "breedgraph"
version = "0.1.0"
description = "BreedGraph application"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
dependencies = [
    "fastapi~=0.138.0",
    "pydantic==2.13.4",
    "ariadne==1.1.0",

    "neo4j==6.2.0",
    "redis==8.0.0",

    "bcrypt~=5.0.0",
    "itsdangerous~=2.2.0",
    "password-strength~=0.0.3.post2",

    "aiosmtplib==5.1.2",
    "python-multipart>=0.0.32",
    "aiofiles~=25.1.0",

    "wrapt==2.2.2",

    "networkx~=3.6.1",
    "numpy~=2.5.0",
    "pandas~=3.0.3",
    "statsmodels~=0.14.6",
]

[project.optional-dependencies]
test = [
    "httpx==0.28.1",
    "pytest~=9.1.1",
    "pytest-env~=1.6.0",
    "requests~=2.34.2",
    "faker~=40.23.0",
    "pytest-asyncio~=1.4.0",
    "asgi-lifespan~=2.1.0",
]

server = [ "uvicorn~=0.49.0" ]

dev = [
    "breedgraph[test]",
    "breedgraph[server]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
breedgraph = [
    "entrypoints/fastapi/graphql/type_definitions/**/*.graphql",
    "adapters/neo4j/cypher/**/*.cypher",
]

[project.urls]
Homepage = "https://github.com/marcusmchale/breedgraph"
Repository = "https://github.com/marcusmchale/breedgraph"
Issues = "https://github.com/marcusmchale/breedgraph/issues"